--- a/styles/components/filter_toolbar.sass
+++ b/styles/components/filter_toolbar.sass
@@ -21,6 +21,16 @@
       gap: 10px
       flex-direction: row
 
+      .home-view-buttons
+        display: flex
+        gap: 10px
+        flex-direction: row
+
+      .card-view-buttons
+        display: flex
+        gap: 10px
+        flex-direction: row
+
   .filter-toolbar-right
     margin-left: 16px
 
@@ -154,3 +164,5 @@
           font-size: 12px
           min-width: 24px
           text-align: center
+
+
