--- a/styles/module/md_calendar.sass
+++ b/styles/module/md_calendar.sass
@@ -8,3 +8,104 @@
 
   .module-content
     padding: 0
+
+
+
+.module-container.calendar-module
+  .module-content
+    .calendar-module
+      position: relative
+
+
+
+
+
+.right-column
+  .module-container.calendar-module
+    &:hover
+      .notes-section
+        transform: translateX(-100%)
+    .notes-section
+      &.active
+        transform: translateX(-100%)
+
+.left-column
+  .module-container.calendar-module
+    &:hover
+      .notes-section
+        transform: translateX(100%)
+    .notes-section
+      &.active
+        transform: translateX(100%)
+
+.center-column
+  .module-container.calendar-module
+    max-height: 289px
+    .calendar-module
+      display: flex
+      height: 100%
+      position: relative
+      flex-direction: row
+
+      .calendar-section
+        width: 50%
+
+      .notes-section
+        width: 50%
+        position: relative
+
+
+
+
+
+
+
+.module-container.calendar-module
+  position: relative
+
+  // 日历区域
+  .calendar-container
+    width: auto
+    position: relative
+
+  // 笔记区域
+  .notes-section
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    overflow: hidden
+    padding: 10px
+    background: var(--background-primary)
+    border-radius: 0 8px 8px 0
+    border: 1px solid var(--background-modifier-border)
+    border-bottom: none
+    z-index: 1
+    transition: all 0.2s ease
+
+
+    .date-title
+      display: flex
+      height: 30px
+      justify-content: center
+      align-items: center
+      color: var(--interactive-accent)
+      border-bottom: 1px solid var(--background-modifier-border)
+
+    .notes-list
+      height: calc(100% - 30px)
+      display: flex
+      font-size: 14px
+      gap: 7px
+      margin-top: 7px
+      flex-direction: column
+      overflow-y: auto
+
+    .note-item
+      display: flex
+      padding: 4px
+      cursor: pointer
+      border-radius: 4px
+      &:hover
+        background-color: var(--background-modifier-hover)
