--- a/styles/module/heatmap.sass
+++ b/styles/module/heatmap.sass
@@ -1,40 +1,68 @@
-
-// 模块-热力图
 .heatmap-container
   padding: 16px
+  max-width: 100%
+  overflow-x: auto
+  
   .heatmap-grid
     display: flex
     flex-direction: column
     gap: 4px
     position: relative
+    width: fit-content
+    
     .month-labels
       display: flex
-      padding-left: 20px
       margin-bottom: 4px
+      flex-direction: row
+      justify-content: space-between
+      flex-wrap: nowrap
       
       .month-label
-        flex: 1
         text-align: center
         color: var(--text-muted)
         font-size: 0.8em
+        cursor: pointer
+        opacity: 0.2
+        transition: all 0.2s ease
+        
+        &:hover
+          color: var(--text-normal)
+          opacity: 1
+
+        &.highlight
+          color: var(--text-normal)
+          font-weight: 800
+          opacity: 1
+          // text-decoration: underline
   
     .week-labels
       position: absolute
       display: flex
       flex-direction: column
-      gap: 12px
+      gap: 3px
       padding-top: 4px
       
       .week-label
         height: 10px
         color: var(--text-muted)
         font-size: 0.8em
+        text-align: left
+        transition: all 0.2s ease
+        opacity: 0.2
+        
+        &.highlight
+          color: var(--text-normal)
+          font-weight: 800
+          // text-decoration: underline
+          opacity: 1
   
     .days-container
       padding-left: 20px
       display: grid
-      grid-template-columns: repeat(53, 1fr)
+      grid-template-rows: repeat(7, 1fr)
+      grid-auto-flow: column
       gap: 2px
+      width: fit-content
       
       .day-cell
         width: 10px
@@ -44,19 +72,33 @@
         cursor: pointer
         
         &:hover
-            transform: scale(1.2)
+          border: 1px solid var(--text-normal)
+          transform: scale(1.5)
+          
+        &.month-hover
+          filter: brightness(1.1)
         
         &.level-0
-            background-color: var(--background-modifier-border)
+          background-color: var(--background-modifier-border)
+          &.month-hover
+            background-color: var(--background-modifier-border-hover)
         
         &.level-1
-            background-color: #9be9a8
+          background-color: #9be9a8
+          &.month-hover
+            background-color: #adf0b9
         
         &.level-2
-            background-color: #40c463
+          background-color: #40c463
+          &.month-hover
+            background-color: #52d375
         
         &.level-3
-            background-color: #30a14e
+          background-color: #30a14e
+          &.month-hover
+            background-color: #42b360
         
         &.level-4
-            background-color: #216e39
+          background-color: #216e39
+          &.month-hover
+            background-color: #338a4b
