--- a/styles/views/home.sass
+++ b/styles/views/home.sass
@@ -34,11 +34,9 @@
       display: flex
       flex-direction: column
       gap: 20px
-      // min-width: 400px  // 设置最小宽度防止过小
-      // border: 1px dashed var(--background-modifier-border)
+      max-width: 50%
       padding: 10px
       border-radius: 8px
-      // overflow-x: hidden
         
     // 右侧列
     .right-column
