动态时间轴

--- a/styles.sass
+++ b/styles.sass
@@ -12,6 +12,7 @@
 @use "styles/module/stats"
 @use "styles/module/heatmap"
 @use "styles/module/md_calendar"
+@use "styles/module/dynamic1"
 
 
 @use "styles/views/week"
@@ -19,6 +20,8 @@
 @use "styles/views/list"
 @use "styles/views/month"
 @use "styles/views/home"
+
+
 
   
 // 主容器布局   	
