--- a/styles/module/md_dynamic.sass
+++ b/styles/module/md_dynamic.sass
@@ -1,7 +1,21 @@
+
+.module-container.dynamic-module
+  background-color: transparent
+  border:0
+  border-radius: 0
+  padding: 0
+  .module-header
+    display: none
+  .module-content
+    padding: 0
+    background-color: transparent
+  
+
+
 .dynamic-module
   height: 100%
   overflow-y: auto
-  padding: 1rem
+  // padding: 1rem
   
   .timeline-layout
     display: flex
@@ -19,6 +33,8 @@
     gap: 1rem
     position: relative
     padding-left: 2rem
+    flex-direction: column
+
     
     .time-point
       position: absolute
@@ -45,6 +61,7 @@
       padding-top: 0.25rem
       
     .dynamic-card
+      // width: calc(100% - 2rem)
       flex: 1
       background-color: var(--background-secondary)
       border: 1px solid var(--background-modifier-border)
