--- a/styles/module/md_calendar.sass
+++ b/styles/module/md_calendar.sass
@@ -1,4 +1,6 @@
 .module-container.calendar-module
+  position: sticky !important
+  top: 0 !important
   display: flex
   flex-direction: column
   gap: 16px
