--- a/styles/module/md_dynamic.sass
+++ b/styles/module/md_dynamic.sass
@@ -1,3 +1,8 @@
+.card-container[data-view="home"]
+  .center-column
+    max-height: max-content
+  // max-height: max-content
+  // background-color: #f00
 
 .module-container.dynamic-module
   background-color: transparent
@@ -11,11 +16,10 @@
     background-color: transparent
   
 
-
 .dynamic-module
   height: 100%
   overflow-y: auto
-  // padding: 1rem
+
   
   .timeline-layout
     display: flex
