--- a/styles/views/month.sass
+++ b/styles/views/month.sass
@@ -124,6 +124,7 @@
         display: grid
         height: 100%
         grid-template-columns: repeat(7, 1fr)
+        grid-auto-rows: 1fr
         gap: 1px
         flex: 1
         background-color: var(--background-modifier-border)
