--- a/styles/components/calendar.sass
+++ b/styles/components/calendar.sass
@@ -1,6 +1,7 @@
 
 // 日历-筛选工具栏
 .calendar-toggle-button.toolbar-button
+  gap: 6px
   position: relative
   .calendar-container 
     position: absolute
