--- a/styles.sass
+++ b/styles.sass
@@ -82,11 +82,11 @@
         width: 16px
         height: 16px
 
-
+  .toolbar-center
     // 视图切换器样式 	
     .view-switcher
       display: flex
-      gap: 0.5rem
+      gap: 0.7rem
       padding: 0
       border-left: 1px solid var(--background-modifier-border)
       margin-left: 1rem
@@ -95,7 +95,7 @@
       .view-switch-btn 
         background-color: transparent
         color: var(--text-muted)
-        border: none
+        border: 0
         column-gap: 5px
         border-radius: 4px
         padding: 6px
@@ -150,7 +150,7 @@
       border-radius: 8px
       border: 1px solid var(--background-modifier-border)
       cursor: pointer
-      transition: all 0.3s ease-in-out
+      transition: all 0.1s ease-in-out
       opacity: 1
       transform: scale(1)
       overflow: hidden
