--- a/styles/views/month.sass
+++ b/styles/views/month.sass
@@ -13,7 +13,7 @@
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 16px 24px
+        // padding: 16px 24px
         // background: var(--background-secondary)
         // border-bottom: 1px solid var(--background-modifier-border)
         // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05)
