--- a/styles.sass
+++ b/styles.sass
@@ -163,7 +163,10 @@
       &:hover 
         transform: translateY(-2px)
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
-      
+        .note-card-content
+          .note-title
+            font-size: 1.2em
+
       &.selected 
         border: 2px solid var(--interactive-accent)
         box-shadow: 0 0 8px rgba(var(--interactive-accent-rgb), 0.3)
@@ -794,3 +797,8 @@
 
       &:hover 
         background: var(--background-modifier-hover)
+
+
+// .menu-scroll  
+  // .menu-item:last-child
+    // color: var(--text-error)
